stylesheets/styles.css
body {
	background-color: #fff;
	padding:50px;
	font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
	color:#595959;
}

p {
	font-size: 1.2em !important;
}

h1 {
	font-family: 'Bungee', cursive !important;
}

#icon {
	border-radius: 50%;
	-webkit-transition: -webkit-transform .4s ease-in-out;
	transition: transform .4s ease-in-out;
}
#icon:hover {
	-webkit-transform: rotate(20deg);
	transform: rotate(20deg);
}


blockquote {
	border-left:1px solid #e5e5e5;
	margin:0;
	padding:0 0 0 20px;
	font-style:italic;
}

code, pre {
	font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
	color:#333;
	font-size:12px;
}

pre {
	padding:8px 15px;
	background: #f8f8f8;
	border-radius:5px;
	border:1px solid #e5e5e5;
	overflow-x: auto;
}

img {
	width:100%;
	border-radius: 20px;
	margin-top: 1%;
	margin-bottom: 1%;
	max-height: 750px;
}

.sprite {
	display: block;
	height: 200px;
	width: auto;
}

.header {
	position:fixed !important;
	padding-right: 2% !important;
	-webkit-font-smoothing:subpixel-antialiased;
}

.panel-body {
	padding: 1%;
	font-size: 1.2em;
	text-align: justify;
}

#icons {
	font-size: 3em;
	text-align: center;
	color:darkcyan;
}

#icons a {
	text-decoration: none !important;
}

.comments {
	position: fixed !important;
}

#disqus_thread {
	overflow-y: scroll !important;
	max-height: 800px;
}

#content iframe {
	max-width:640px !important;
	max-height: none !important;
}

#scrollToTop {
	position: fixed;
	bottom: 50px;
	height: 45px;
	right: 680px;
	font-weight: bold;
	text-align: center;
    border-radius: 20px;
}

#scrollToComments {
	text-align: center;
	width: 100%;
	display: none;
}

@media (max-width: 1200px) {

	body {
		padding: 0;
	}

	#icon {
		max-width: 400px;
		padding: auto;

	}

	.header {
		float: left;
		margin: 0 !important;
	}

	.header, .comments {
		position: static !important;
	}

	.comments{
		margin: auto !important;
	}

	.section {
		margin: auto !important;
		width: 58% !important;
	}

	.section,.comments {
		overflow: hidden !important;
	}


	.header, .section {
		font-size: 1.3em;
	}

	#disqus_thread {
		overflow-y: auto !important;
		max-height: none;
	}

	#scrollToComments {
		display: block !important;
	}

}

@media (max-width: 992px) {
	.section {
		width: 100% !important;
	}
  
	#scrollToTop {
		position: static;
	}

	.panel-body {
		text-align: left;
	}
  
}

